--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,12 @@ i.icon-white {
 	height: 100%;
 }
 
+.img-circle {
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+}
+
 #map {
 	width: 100%;
 	height: 100%;
