--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,10 @@ i.icon-white {
 }
 
 .img-circle {
+	margin-top: 9px;
 	border-radius: 50%;
-	height: 100%;
-	width: 100%;
+	height: 40px;
+	width: 40px;
 }
 
 #map {
