--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,44 @@ i.icon-white {
 	color: white;
 }
 
+.scrollToTop{
+	width:100px; 
+	height:130px;
+	padding:10px;
+	text-align:center;
+	background: whiteSmoke;
+	font-weight: bold;
+	color: #444;
+	text-decoration: none;
+	position:fixed;
+	top:75px;
+	right:40px;
+	display:none;
+	background: url('arrow_up.png') no-repeat 0px 20px;
+}
+.scrollToTop:hover{
+	text-decoration:none;
+}
+
+#topBtn {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	border: none;
+	outline: none;
+	background-color: red;
+	color: white;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 10px;
+}
+
+#topBtn:hover {
+	background-color: #555;
+}
+
 .grid {
 	/*
 	border: 1px solid blue !important;
