Various fixes, added Cloud Functions

--- a/template/home.html
+++ b/template/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
-<html class="grey lighten-3">
+<html>
 <head>
   <meta charset="utf-8">
   <title>EasyCartelera</title>
@@ -15,6 +15,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+  <div class="row white-text">
+    <div class="col s8 offset-s2">
+      <h1>Welcome to EasyCartelera!</h1>
+    </div>
+  </div>
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
