--- a/template/movieList.html
+++ b/template/movieList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
-<html style="background-color:rgb(66, 196, 172);">
+<html>
 <head>
   <meta charset="utf-8">
   <link href="../css/style.css" type="text/css" rel="stylesheet">
@@ -20,7 +20,7 @@
       <br>
       <br>
       <div class="preloader-wrapper small active">
-        <div class="spinner-layer spinner-green-only">
+        <div class="spinner-layer spinner-blue-only">
           <div class="circle-clipper left">
             <div class="circle"></div>
           </div><div class="gap-patch">
