--- a/template/home.html
+++ b/template/home.html
@@ -26,6 +26,6 @@
 <script type="text/javascript" src="../js/materialize/materialize.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src="../js/build.js" type="text/javascript"></script>
-<script src="../js/firebase.js" type="text/javascript"></script>
+<script src="../js/firebase/firebase.js" type="text/javascript"></script>
 <script src="../js/home/home.js" type="text/javascript"></script>
 </html>
