--- a/template/movieList.html
+++ b/template/movieList.html
@@ -1,41 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
-<html class="grey lighten-3">
+<html>
 <head>
   <meta charset="utf-8">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link href="../css/style.css" type="text/css" rel="stylesheet">
+  <link href="../css/movieList/movieList-style.css" type="text/css" rel="stylesheet">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="../css/materialize/materialize.min.css" media="screen,projection" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>EasyCartelera</title>
-  <link rel="shortcut icon" href="media/movie.png">
+  <link rel="shortcut icon" href="../media/movie.png">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-  <ul id="account-dropdown" class="dropdown-content">
-    <li><a href="account.html">Profile</a></li>
-    <li><a href="#!" onclick="signOut()">Sign out</a></li>
-  </ul>
-  <nav>
-    <div class="nav-wrapper teal darken-3">
-      <a href="home.html" class="brand-logo"><i class="material-icons icon-white" style="font-size: 50px">local_movies</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li id="li_movie_list"><a href="#"><i class="material-icons icon-white" style="font-size: 40px">format_list_bulleted</i></a></li>
-        <li id="li_map"><a href="index.html"><i class="material-icons icon-white" style="font-size: 40px">map</i></a></li>
-        <li id="li_home"><a href="home.html"><i class="material-icons icon-white" style="font-size: 40px">home</i></a></li>
-        <li><a class="dropdown-button" href="#" data-activates="account-dropdown">Account<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li id="li_account"><a href="account.html"><i class="material-icons icon-white" style="font-size: 40px">account_circle</i></a></li>
-      </ul>
-    </div>
-  </nav>
   <div id="preloader" class="row">
     <div class="col s6 offset-s6">
       <br>
       <br>
       <div class="preloader-wrapper small active">
-        <div class="spinner-layer spinner-green-only">
+        <div class="spinner-layer spinner-blue-only">
           <div class="circle-clipper left">
             <div class="circle"></div>
           </div><div class="gap-patch">
@@ -60,8 +45,9 @@
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="../js/materialize/materialize.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
-<script src="js/firebase.js" type="text/javascript"></script>
-<script src="js/movie_list.js" type="text/javascript"></script>
+<script src="../js/build.js" type="text/javascript"></script>
+<script src="../js/firebase/firebase.js" type="text/javascript"></script>
+<script src="../js/movieList/movie_list.js" type="text/javascript"></script>
 </html>
