--- a/template/databaseForms.html
+++ b/template/databaseForms.html
@@ -33,7 +33,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCndUePDugeHEt2kQ2vA4ptMYJpiUeGqXE&libraries=places"></script>
-<script src="js/firebase.js" type="text/javascript"></script>
-<script src="js/themoviedb.js" type="text/javascript"></script>
-<script src="js/forms.js" type="text/javascript"></script>
+<script src="../js/firebase/firebase.js" type="text/javascript"></script>
+<script src="../js/themoviedb.js" type="text/javascript"></script>
+<script src="../js/admin/forms.js" type="text/javascript"></script>
 </html>
