--- a/template/home.html
+++ b/template/home.html
@@ -16,10 +16,60 @@
 </head>
 <body>
   <div class="row white-text">
-    <div class="col s8 offset-s2">
-      <h1>Welcome to EasyCartelera!</h1>
+    <div class="container">
+      <h1 class="title">Welcome to EasyCartelera!</h1>
     </div>
   </div>
+  <div class="container center">
+    <img class="responsive-img" src="../media/images/window.png" alt="">
+  </div>
+  <div class="section white-background center">
+    <div class="row">
+      <div class="col s4">
+        <div class="center">
+          <i class="material-icons">flash_on</i>
+          <p>Speeds up your search</p>
+          <p class="light center">We did most of the heavy lifting for you to provide the best cinemas near you.</p>
+        </div>
+      </div>
+      <div class="col s4">
+        <div class="center">
+          <i class="material-icons">group</i>
+          <p>User Experience Focused</p>
+          <p class="light center">By utilizing elements and principles of Material Design, we were able to create a webpage that focuses on User Experience.</p>
+        </div>
+      </div>
+      <div class="col s4">
+        <div class="center">
+          <i class="material-icons">settings</i>
+          <p>Easy to use</p>
+          <p class="light center">We have provided detailed documentation as well as specific examples to help new users get started.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer reverse-gradient">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">EasyCartelera</h5>
+        <p class="grey-text text-lighten-4">Obispo Moscoso y Peralta 2971, Cordoba 5009, Argentina</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Contact us!</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="https://github.com/profran/EasyCartelera/">Github</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=francescosilvetti8@gmail.com&su=EasyCartelera&tf=1">E-mail</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    © 2017 EasyCartelera
+    </div>
+  </div>
+</footer>
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
